# vocSQL

./: .env  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: voc-sql-AutoDeployTrigger-2acdda89-daf3-464a-bd78-d0319b1be56e.yml
.sqlx/: query-b72604582c4b9572e12354b8df73f2a8afdbe0370ca24d3169fa7ceba4822ded.json
configuration/: base.yaml  local.yaml  production.yaml
infra/db/: docker-compose.yml
migrations/: 20241109130024_create_subscriptions_table.sql
src/: configuration.rs  db.rs  email_client.rs  main.rs  startup.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_info.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
