[package]
name = "voc_sql"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "voc_sql"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate"] }
config = "0.11"
chrono = "0.4.15"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "3"
regex = "1.11.1"
claim = "0.5"
validator = "0.19.0"
reqwest = { version = "0.12.9", features = ["json"] }
wiremock = "0.6.2"
serde_json = "1.0.132"

[dev-dependencies]
once_cell = "1"
fake = "3.0.1"


